--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "version": "0.0.1",
   "author": "Jelle De Loecker <jelle@kipdola.be>",
   "dependencies": {
-    "buffered-writer": "*",
-    "xml-stream": "*"
+    "buffered-writer": "0.2.3",
+    "xml-stream": "0.4.5"
   },
   "engines": {
     "node": ">=0.6.0"
